# Colorer-schemes

./: .gitignore  .travis.yml  CHANGELOG.md  README.RU.md  README.md  build.sh  build.xml  catalog.xml  cmake.ent.hrc  cmake.hrc  path.properties  subprojects
.github/workflows/: checks.yml  checks_pull.yml  release.yml  taged-release.yml
base/hrc/: proto.hrc
base/hrc/base/: qml.hrc
base/hrc/misc/: markdown.hrc
base/hrc/rare/: verilog.hrc
base/hrc/scripts/: powershell.hrc  shell-posix.hrc
base/hrd/: catalog-rgb.xml
base/hrd/css/: blue.css  readme.md
catalog/: catalog.allpacked.xml  catalog.base.xml
hrc/: TODO.en.txt  TODO.ru.txt  build.xml  changelog
hrc/apps/ant/: util.xml
hrc/apps/bracket/: bracket.blockcase.xsl  bracket.blockname.xsl  bracket.blockquery.xsl  bracket.xsl
hrc/apps/dtd2xsd/: dtd2schema.pl  dtd2xsd.html  dtd2xsd.pl  dtd2xsd.usage.txt
hrc/apps/ent2hrc/: ent2hrc.pl
hrc/apps/ue2hrc/: wordfiletohrc.js
hrc/apps/xsd2hrc/: custom.default.xml  replace-string.xsl  xsd2hrc.callable.xsl  xsd2hrc.include-attr.xsl  xsd2hrc.include-content.xsl  xsd2hrc.params.xsl  xsd2hrc.prefix.xsl  xsd2hrc.properties  xsd2hrc.replace-patterns.xml  xsd2hrc.root-elements.xsl  xsd2hrc.root.xsl  xsd2hrc.subst-group.xsl  xsd2hrc.typedefs.xsl  xsd2hrc.xmlss.xsl  xsd2hrc.xsl
hrc/hrc/: CHANGELOG  hrc.xsl  proto.hrc  proto.hrc.far  rare.gen.ent.hrc  rare.j2ee.ent.hrc  rare.scripts.ent.hrc  scripts.far.ent.hrc  scripts.ini.ent.hrc
hrc/hrc/base/: asm.hrc  c-win32.ent.hrc  c.hrc  cpp-qt.hrc  cpp.hrc  csharp.hrc  d.hrc  d2-phobos.ent.hrc  default.hrc  go.hrc  groovy.hrc  java.hrc  lua.hrc  nix.hrc  pascal.hrc  perl.hrc  python.hrc
hrc/hrc/db/: sql.hrc
hrc/hrc/inet/: actionscript.hrc  gsp.hrc  html.hrc  jscript.hrc  less.hrc  php-script.ent.hrc  smarty.hrc  ss.hrc  twig.hrc
hrc/hrc/lib/: default.hrc  far.hrc  regexp.hrc  uri.hrc
hrc/hrc/misc/: assa.hrc  ddoc.hrc  diff.hrc  go-template-sprig.hrc  go-template.hrc  helm-text.hrc  helm-tpl.hrc  markdown.hrc  mediawiki.hrc  text.hrc
hrc/hrc/rare/: autoit.hrc  cobol.hrc  cobolfr.hrc  haskell.hrc  jcl.hrc  json.hrc  lisp.hrc  matlab.hrc  picasm.hrc  pl1.hrc  yaml.hrc
hrc/hrc/scripts/: avisynth.hrc  awk.hrc  batch.hrc  dfm.hrc  dockerfile.hrc  iss.hrc  javacc.hrc  jenkinsfile.hrc  lex.hrc  makefile.hrc  qmake.hrc  sh-keywords.ent.hrc  sh.hrc  shell-bash.hrc  shell-posix.hrc  solution.hrc
hrc/hrc/xml/: dtdcatalog.hrc  xpath.hrc
hrc/src/: build.xml  build.xsl
hrc/src/ant/: build.xml
hrc/src/calcset/: build.xml
hrc/src/colorer/: build.xml
hrc/src/docbook/: build.xml
hrc/src/entity/: build.xml
hrc/src/esc/: build.xml
hrc/src/htc/: build.xml
hrc/src/ibatis/: build.xml
hrc/src/j2ee/: build.xml
hrc/src/log4j/: build.xml
hrc/src/mathml/: build.xml
hrc/src/parser/: build.xml
hrc/src/perl/: build.xml
hrc/src/php/: build.xml
hrc/src/qrc/: build.xml
hrc/src/rdf/: build.xml
hrc/src/relaxng/: build.xml
hrc/src/rss/: build.xml
hrc/src/sch/: build.xml
hrc/src/sh/: build.xml
hrc/src/svg/: build.xml
hrc/src/wml/: build.xml
hrc/src/wsc/: build.xml
hrc/src/wsdl/: build.xml
hrc/src/xbl/: build.xml
hrc/src/xhtml/: build.xml
hrc/src/xlink/: build.xml
hrc/src/xml/: build.xml
hrc/src/xmlcatalog/: build.xml
hrc/src/xmlschema/: build.xml
hrc/src/xsieve/: build.xml
hrc/src/xslfo/: build.xml
hrc/src/xslt/: build.xml
hrc/src/yml/: build.xml
hrc/test/: runtest.pl  runtest.py  test_load.sh
hrc/test/adp/: example1.adp  example3a.adp  example4a.adp  example5a.adp
hrc/test/asm/: asm.tst.asm
hrc/test/asp/: asp.asp
hrc/test/ass/: CHAOS HEAD - 01.ass  Sakura(full).ass  Watcha!.ass  tags.ass
hrc/test/baan/: baan.cln  baan.tmp020282384.cln
hrc/test/basic/: bas.bas
hrc/test/cf/: dsntree.cfm  lookup.cfm
hrc/test/cpp/: not-template.cpp  raw.cpp  var.cpp  xx.c
hrc/test/dssp/: umnkoder.dsp
hrc/test/ex_aclydis_csyntax/: while.c
hrc/test/forth/: fth.pr.fth  trace.fth
hrc/test/go/: 1.go  test.go
hrc/test/groovy/: LearnGroovy.groovy
hrc/test/html/: 1.html  1.twig  colorer.css  javascript.js  parser-hang1.html  parser-hang3  re.js  style.html  test.css  test.yml  testcases.html
hrc/test/java/: newtest.java
hrc/test/jsp/: bad.jsp  newtest.jsp
hrc/test/other/: _allrs.rsl  avisynth.avs  ch.clipper.prg  colorer  colorer.ini  d-sample.d  eml.eml  lala.1c  mediawiki.mw  test.as  test.awk  test.bat  test.cue  test.dt  test.mxml  test.sh  test2.bat  test_colors.tdf  text.txt
hrc/test/pascal/: pas.myclasses.pas  pas.problem_3.pas
hrc/test/perl/: pod.pl  pod2.pl  prof_test.pl  var-re.pl
hrc/test/php/: a_new.php  bugs-020205.php  func.php  javascript.php
hrc/test/python/: number.py  xx.py
hrc/test/reg/: far.reg
hrc/test/ruby/: ruby-strings.rb
hrc/test/shell/: shell-bash-spec.bash
hrc/test/sql/: sql.015.sql  sql.problem_0.sql  sql.problem_1.sql
hrc/test/tex/: tex.sample.tex
hrc/test/verilog/: cpu.v
hrc/test/xml/: ex1.wsdl  journal.dtd  xxx.xml
hrc/test/xslt/: aposquot.xsl  test.xsl  xpath-bug.xq  xx.xsl
hrd/: TODO.txt  build.xml  changelog
hrd/apps/con2rgb/: build.xml  con2rgb.xsl
hrd/apps/conemu/: build.xml
hrd/css/: build.xml
hrd/hrd/: build.xml  build.xsl  catalog-console.xml  catalog-rgb.xml  catalog-text.xml
hrd/palette/: ansi.xml  mirice.xml  mirror.xml
hrd/reg.addons/: build.xml
shared/: colorer.cat
shared/2003/: catalog.dtd  doclinks.xsd
src/: build.cmd  build.sh  build.xml  path.properties
src/hrc/: build.xml
src/hrd/: build.xml
src/shared/: colorer-cat.xml
tests/: ignored_error.txt  test_fullload.sh
tests/test/: lst.pl  runtest.py
tests/test/cmake/1/: CMakeLists.txt
tests/test_load/: test_fullload.sh
(+893 files in other folders)
